# UIT_DSC

./: EDA.ipynb  main.py  pyproject.toml  test.py  uit-dsc.ipynb
src/: config.py  inference.py  peft_model.py  prompt.py
