[project]
name = "uit-dsc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.47.0",
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "loralib>=0.1.2",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "scikit-learn>=1.7.1",
    "spacy>=3.8.7",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "trl>=0.22.2",
    "unsloth>=2025.7.2",
    "xformers>=0.0.32.post2",
]
