[project]
name = "uit-dsc"
version = "0.1.0"
description = "UIT DSC Fine-tuning Project"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "peft>=0.6.0",
    "trl>=0.7.11",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
unsloth = [
    "unsloth @ git+https://github.com/unslothai/unsloth.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]